--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,10 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>{{name}}</p>
+        
          <img class="portrait" src="/img/avatar.webp" alt="">
+        <p>{{name}}</p>
+        <p>This site uses data from <a href="https://mapbox.com" target="_blank">mapbox.com</a> and <a target="_blank"href="https://weatherstack.com/">weatherstack.net</a> </p>
     </div>
     
     {{>footer}}
